<resources>
    <string name="app_name">PhD Admission App</string>
    <string name="title_activity_navigation_drawer">Navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home"><font fgcolor='#FFFFFF'>HOME</font></string>
    <string name="menu_home_t"><font fgcolor='#FFFFFF'>HOME</font></string>
    <string name="menu_gallery"><font fgcolor='#FFFFFF'>INSTRUCTIONS</font></string>
    <string name="menu_slideshow"><font fgcolor='#FFFFFF'>FAQ</font></string>
    <string name="fill"><u>FILL APPLICATION</u></string>
    <string name="view"><u>VIEW APPLICATION</u></string>
    <string name="download"><u>DOWNLOAD APPLICATION</u></string>
    <string name="status"><u>CHECK STATUS</u></string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_drawer">drawer</string>

    <string name="title_activity_nav_drawer">nav_drawer</string>
    <string name="title_activity_drawer_nav">drawer_nav</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_bottom_bar">bottom_bar</string>
</resources>