<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_dark"
        android:id="@+id/ll"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font2"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:textColor="#000000"
            android:textSize="30sp" />


        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/personal_info"
            android:layout_gravity="center"
            android:layout_width="350dp"
            app:cardBackgroundColor="@color/white"
            android:layout_height="140dp"
            android:layout_marginTop="20dp"
            card_view:cardCornerRadius="4dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:alpha="0.15"
            android:src="@drawable/bg1"
            />
            <TextView
                android:id="@+id/personal_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Personal Details : "
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:fontFamily="@font/sub"/>
            <TextView
                android:id="@+id/sub1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="Application for filling your personal details."
                android:paddingTop="0dp"
                android:textSize="20dp"
                android:textColor="#FF000000"
                android:fontFamily="@font/text"/>

            <TextView
                android:id="@+id/fillapplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fill"
                android:textAlignment="center"
                android:textSize="20dp"
                android:layout_marginTop="50dp"
                android:textColor="#FF0000ff"
                android:fontFamily="@font/sub"/>

          <!--  <TextView
                android:id="@+id/appli_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fill"
                android:textAlignment="center"
                android:paddingTop="90dp"
                android:textSize="20dp"
                android:textColor="#FF0000ff"
                android:fontFamily="@font/sub"/> -->
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/edu_info"
            android:layout_gravity="center"
            android:layout_width="350dp"
            app:cardBackgroundColor="@color/white"
            android:layout_height="140dp"
            android:layout_marginTop="20dp"
            card_view:cardCornerRadius="4dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:alpha="0.15"
                android:src="@drawable/bg2"
                />

            <TextView
                android:id="@+id/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Educational Details : "
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:fontFamily="@font/sub"/>
            <TextView
                android:id="@+id/sub2.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="Application for filling your Educational Records."
                android:paddingTop="0dp"
                android:textSize="20dp"
                android:textColor="#FF000000"
                android:fontFamily="@font/text"/>
            <TextView
                android:id="@+id/appli_link2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fill"
                android:textAlignment="center"
                android:paddingTop="90dp"
                android:textSize="20dp"
                android:textColor="#FF0000ff"
                android:fontFamily="@font/sub"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/appl_info"
            android:layout_gravity="center"
            android:layout_width="350dp"
            app:cardBackgroundColor="@color/white"
            android:layout_height="140dp"
            android:layout_marginTop="20dp"
            card_view:cardCornerRadius="4dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:alpha="0.15"
                android:src="@drawable/bg3"
                />

            <TextView
                android:id="@+id/info_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User Activity : "
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:fontFamily="@font/sub"/>
            <TextView
                android:id="@+id/appli_link3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/view"
                android:paddingTop="0dp"
                android:textSize="20dp"
                android:textColor="#FF0000ff"
                android:fontFamily="@font/sub"/>
            <TextView
                android:id="@+id/appli_link4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/download"
                android:paddingTop="90dp"
                android:textSize="20dp"
                android:textColor="#FF0000ff"
                android:fontFamily="@font/sub"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="!! YOU CANNOT EDIT THE APPLICATION AFTER SUBMITTED !!"
            android:textAlignment="center"
            android:textColor="#ff0000"
            android:textSize="20dp"
            android:fontFamily="@font/text"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="524dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>